# mle-challenge

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: api.py  model.py  settings.py
tests/: test_app.py
